Segunda entrega del proyecto final
Cambio:
-Nueva paleta de colores
-Responsive
Futuros cambios:
-Mejora visual

--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Editoriales/consultas_editoriales.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Editoriales/consultas_editoriales.html
@@ -50,16 +50,150 @@
         </div>
         <div class="consulta_style-orden">
             <div class="consulta_style-fieldset">
-                <div class="consulta_style-padding">
+                <div>
                     <ul>
                         <li>Nombre editorial</li>
                     </ul>
-                    <div>
-                        <a class="form_button" href="#">Modificar</a>
-                        <a class="form_button" href="#">Eliminar</a>
-                    </div>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
                 </div>
             </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <div>
+                    <ul>
+                        <li>Nombre editorial</li>
+                    </ul>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Filtrar Libros</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            
         </div>
 
     </main>
