--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Libros/consultas_libros.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Libros/consultas_libros.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <!--<div class="home_tittle">
             <img src="../img/IMG_20220402_184004__01.jpg" alt="Imagen del Titulo" width="125">
         </div>-->
@@ -50,49 +50,6 @@
         </div>
         <div class="consulta_style-orden">
             <div class="consulta_style-fieldset">
-                <div class="consulta_style-padding">
-                    <img src="" alt="Imagen Libro">
-                    <ul>
-                        <li>Titulo</li>
-                        <li>Autor</li>
-                        <li>Editorial</li>
-                        <li>Sinopsis</li>
-                        <li>ISBN</li>
-                        <li>Fecha de carga</li>
-                        <li>Estado</li>
-                        <li>Lugar físico</li>
-                    </ul>
-                </div>
-                <div>
-                    <a href="#" class="form_button">Modificar</a>
-                    <a href="#" class="form_button">Eliminar</a>
-                </div>
-
-
-            </div>
-            <div class="consulta_style-fieldset">
-                <div class="consulta_style-padding">
-                    <img src="" alt="Imagen Libro">
-                    <ul>
-                        <li>Titulo</li>
-                        <li>Autor</li>
-                        <li>Editorial</li>
-                        <li>Sinopsis</li>
-                        <li>ISBN</li>
-                        <li>Fecha de carga</li>
-                        <li>Estado</li>
-                        <li>Lugar físico</li>
-                    </ul>
-                </div>
-                <div>
-                    <a href="#" class="form_button">Modificar</a>
-                    <a href="#" class="form_button">Eliminar</a>
-                </div>
-
-
-            </div>
-            <div class="consulta_style-fieldset">
-                <div class="consulta_style-padding">
                 <img src="" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
@@ -104,15 +61,148 @@
                     <li>Estado</li>
                     <li>Lugar físico</li>
                 </ul>
-            </div>
                 <div>
                     <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
                     <a href="#" class="form_button">Eliminar</a>
                 </div>
-
+            </div>
+            <div class="consulta_style-fieldset">
+                <img src="" alt="Imagen Libro">
+                <ul>
+                    <li>Titulo</li>
+                    <li>Autor</li>
+                    <li>Editorial</li>
+                    <li>Sinopsis</li>
+                    <li>ISBN</li>
+                    <li>Fecha de carga</li>
+                    <li>Estado</li>
+                    <li>Lugar físico</li>
+                </ul>
+                <div>
+                    <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
+                    <a href="#" class="form_button">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <img src="" alt="Imagen Libro">
+                <ul>
+                    <li>Titulo</li>
+                    <li>Autor</li>
+                    <li>Editorial</li>
+                    <li>Sinopsis</li>
+                    <li>ISBN</li>
+                    <li>Fecha de carga</li>
+                    <li>Estado</li>
+                    <li>Lugar físico</li>
+                </ul>
+                <div>
+                    <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
+                    <a href="#" class="form_button">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <img src="" alt="Imagen Libro">
+                <ul>
+                    <li>Titulo</li>
+                    <li>Autor</li>
+                    <li>Editorial</li>
+                    <li>Sinopsis</li>
+                    <li>ISBN</li>
+                    <li>Fecha de carga</li>
+                    <li>Estado</li>
+                    <li>Lugar físico</li>
+                </ul>
+                <div>
+                    <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
+                    <a href="#" class="form_button">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <img src="" alt="Imagen Libro">
+                <ul>
+                    <li>Titulo</li>
+                    <li>Autor</li>
+                    <li>Editorial</li>
+                    <li>Sinopsis</li>
+                    <li>ISBN</li>
+                    <li>Fecha de carga</li>
+                    <li>Estado</li>
+                    <li>Lugar físico</li>
+                </ul>
+                <div>
+                    <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
+                    <a href="#" class="form_button">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <img src="" alt="Imagen Libro">
+                <ul>
+                    <li>Titulo</li>
+                    <li>Autor</li>
+                    <li>Editorial</li>
+                    <li>Sinopsis</li>
+                    <li>ISBN</li>
+                    <li>Fecha de carga</li>
+                    <li>Estado</li>
+                    <li>Lugar físico</li>
+                </ul>
+                <div>
+                    <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
+                    <a href="#" class="form_button">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <img src="" alt="Imagen Libro">
+                <ul>
+                    <li>Titulo</li>
+                    <li>Autor</li>
+                    <li>Editorial</li>
+                    <li>Sinopsis</li>
+                    <li>ISBN</li>
+                    <li>Fecha de carga</li>
+                    <li>Estado</li>
+                    <li>Lugar físico</li>
+                </ul>
+                <div>
+                    <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
+                    <a href="#" class="form_button">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset">
+                <img src="" alt="Imagen Libro">
+                <ul>
+                    <li>Titulo</li>
+                    <li>Autor</li>
+                    <li>Editorial</li>
+                    <li>Sinopsis</li>
+                    <li>ISBN</li>
+                    <li>Fecha de carga</li>
+                    <li>Estado</li>
+                    <li>Lugar físico</li>
+                </ul>
+                <div>
+                    <a href="#" class="form_button">Modificar</a>
+                </div>
+                <div>
+                    <a href="#" class="form_button">Eliminar</a>
+                </div>
             </div>
         </div>
-
+        
     </main>
     <footer>
         Todos los derechos reservados a PipoCorp
