--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Prestamos/consultas_prestamo.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Prestamos/consultas_prestamo.html
@@ -50,7 +50,7 @@
             </div>
             <div class="consulta_style-orden">
                 <div class="consulta_style-fieldset ">
-                    <div class="consulta_style-padding">
+                    <div>
                         <ul>
                             <li>Socio</li>
                             <li>Libro prestado</li>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="consulta_style-fieldset ">
-                    <div class="consulta_style-padding">
+                    <div>
                         <ul>
                             <li>Socio</li>
                             <li>Libro prestado</li>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="consulta_style-fieldset ">
-                    <div class="consulta_style-padding">
+                    <div>
                         <ul>
                             <li>Socio</li>
                             <li>Libro prestado</li>
@@ -86,7 +86,84 @@
                     </div>
                     <div>
                         <a class="form_button" href="#">Cambiar Estado</a>
-                        
+                    </div>
+                </div>
+                <div class="consulta_style-fieldset ">
+                    <div>
+                        <ul>
+                            <li>Socio</li>
+                            <li>Libro prestado</li>
+                            <li>Fecha de caducidad</li>
+                            <li>Estado del libro</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a class="form_button" href="#">Cambiar Estado</a>
+                    </div>
+                </div>
+                <div class="consulta_style-fieldset ">
+                    <div>
+                        <ul>
+                            <li>Socio</li>
+                            <li>Libro prestado</li>
+                            <li>Fecha de caducidad</li>
+                            <li>Estado del libro</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a class="form_button" href="#">Cambiar Estado</a>
+                    </div>
+                </div>
+                <div class="consulta_style-fieldset ">
+                    <div>
+                        <ul>
+                            <li>Socio</li>
+                            <li>Libro prestado</li>
+                            <li>Fecha de caducidad</li>
+                            <li>Estado del libro</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a class="form_button" href="#">Cambiar Estado</a>
+                    </div>
+                </div>
+                <div class="consulta_style-fieldset ">
+                    <div>
+                        <ul>
+                            <li>Socio</li>
+                            <li>Libro prestado</li>
+                            <li>Fecha de caducidad</li>
+                            <li>Estado del libro</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a class="form_button" href="#">Cambiar Estado</a>
+                    </div>
+                </div>
+                <div class="consulta_style-fieldset ">
+                    <div>
+                        <ul>
+                            <li>Socio</li>
+                            <li>Libro prestado</li>
+                            <li>Fecha de caducidad</li>
+                            <li>Estado del libro</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a class="form_button" href="#">Cambiar Estado</a>
+                    </div>
+                </div>
+                <div class="consulta_style-fieldset ">
+                    <div>
+                        <ul>
+                            <li>Socio</li>
+                            <li>Libro prestado</li>
+                            <li>Fecha de caducidad</li>
+                            <li>Estado del libro</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a class="form_button" href="#">Cambiar Estado</a>
                     </div>
                 </div>
             </div>
