--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Socio/consultas_socios.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Socio/consultas_socios.html
@@ -53,7 +53,7 @@
 
         <div class="consulta_style-orden">
             <div class="consulta_style-fieldset ">
-                <div class="consulta_style-padding">
+                <div>
                     <ul>
                         <li>Nombre</li>
                         <li>Apellido</li>
@@ -66,43 +66,127 @@
                     </ul>
                 </div>
                 <div>
+
+                </div>
+                <div>
                     <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
                     <a class="form_button" href="#">Eliminar</a>
                 </div>
             </div>
             <div class="consulta_style-fieldset ">
-                <div class="consulta_style-padding">
-            <ul>
-                <li>Nombre</li>
-                <li>Apellido</li>
-                <li>DNI</li>
-                <li>Email</li>
-                <li>Telefono</li>
-                <li>Domicilio</li>
-                <li>Fecha de subida</li>
-                <li>Fecha de baja</li>
-            </ul>
+                <div>
+                    <ul>
+                        <li>Nombre</li>
+                        <li>Apellido</li>
+                        <li>DNI</li>
+                        <li>Email</li>
+                        <li>Telefono</li>
+                        <li>Domicilio</li>
+                        <li>Fecha de subida</li>
+                        <li>Fecha de baja</li>
+                    </ul>
+                </div>
+                <div>
+
                 </div>
                 <div>
                     <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
                     <a class="form_button" href="#">Eliminar</a>
                 </div>
             </div>
             <div class="consulta_style-fieldset ">
-                <div class="consulta_style-padding">
-            <ul>
-                <li>Nombre</li>
-                <li>Apellido</li>
-                <li>DNI</li>
-                <li>Email</li>
-                <li>Telefono</li>
-                <li>Domicilio</li>
-                <li>Fecha de subida</li>
-                <li>Fecha de baja</li>
-            </ul>
+                <div>
+                    <ul>
+                        <li>Nombre</li>
+                        <li>Apellido</li>
+                        <li>DNI</li>
+                        <li>Email</li>
+                        <li>Telefono</li>
+                        <li>Domicilio</li>
+                        <li>Fecha de subida</li>
+                        <li>Fecha de baja</li>
+                    </ul>
+                </div>
+                <div>
+
                 </div>
                 <div>
                     <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset ">
+                <div>
+                    <ul>
+                        <li>Nombre</li>
+                        <li>Apellido</li>
+                        <li>DNI</li>
+                        <li>Email</li>
+                        <li>Telefono</li>
+                        <li>Domicilio</li>
+                        <li>Fecha de subida</li>
+                        <li>Fecha de baja</li>
+                    </ul>
+                </div>
+                <div>
+
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset ">
+                <div>
+                    <ul>
+                        <li>Nombre</li>
+                        <li>Apellido</li>
+                        <li>DNI</li>
+                        <li>Email</li>
+                        <li>Telefono</li>
+                        <li>Domicilio</li>
+                        <li>Fecha de subida</li>
+                        <li>Fecha de baja</li>
+                    </ul>
+                </div>
+                <div>
+
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
+                    <a class="form_button" href="#">Eliminar</a>
+                </div>
+            </div>
+            <div class="consulta_style-fieldset ">
+                <div>
+                    <ul>
+                        <li>Nombre</li>
+                        <li>Apellido</li>
+                        <li>DNI</li>
+                        <li>Email</li>
+                        <li>Telefono</li>
+                        <li>Domicilio</li>
+                        <li>Fecha de subida</li>
+                        <li>Fecha de baja</li>
+                    </ul>
+                </div>
+                <div>
+
+                </div>
+                <div>
+                    <a class="form_button" href="#">Modificar</a>
+                </div>
+                <div>
                     <a class="form_button" href="#">Eliminar</a>
                 </div>
             </div>
