--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/index.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/index.html
@@ -9,15 +9,14 @@
     <link rel="shortcut icon" href="./img/Book-icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
 
     <title>Biblioteca Pipo</title>
 </head>
 
-<body class="background">
-    <header class="header">
+<body>
+    <header>
         <div class="logo">
             Biblioteca Pipo
         </div>
