--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Editoriales/altas_editoriales.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Editoriales/altas_editoriales.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Biblioteca Pipo</title>
 </head>
-<body>
+<body class="image-body">
     <header class="header">
         <!--<div class="home_tittle">
             <img src="../img/IMG_20220402_184004__01.jpg" alt="Imagen del Titulo" width="125">
@@ -42,7 +42,9 @@
     </div>
         <div class="form_style">
         <form action="">
+            <div class="form_style-input">
             <input type="text" name="nombre_editorial" placeholder="Ej: Atlántida">
+            </div>
             <a class="form_button" href="#">Agregar Editorial</a>
         </form>
     </div>
