--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Libros/consultas_libros.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Libros/consultas_libros.html
@@ -50,7 +50,7 @@
         </div>
         <div class="consulta_style-orden">
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=500B67FB" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=A89D0DE6" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=2D297A22" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=225E6693" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=8B7BCDC2" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=9D9539E7" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=BDC01094" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="consulta_style-fieldset">
-                <img src="" alt="Imagen Libro">
+                <img src="https://api.lorem.space/image/book?w=150&h=220&hash=7F5AE56A" alt="Imagen Libro">
                 <ul>
                     <li>Titulo</li>
                     <li>Autor</li>
