--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Prestamos/devolver_libro.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Prestamos/devolver_libro.html
@@ -15,7 +15,7 @@
     <title>Biblioteca Pipo</title>
 </head>
 
-<body>
+<body class="image-body">
     <header class="header">
         <!--<div class="home_tittle">
             <img src="../img/IMG_20220402_184004__01.jpg" alt="Imagen del Titulo" width="125">
@@ -47,6 +47,7 @@
 
             <form action="">
                 <label for="Libro_prestado">Libros prestados: </label>
+                <div class="form_style-input">
                 <input list="libro_prestado" name="Libro_prestado" placeholder="Libro prestado 1">
                 <datalist id="libro_prestado">
                     <option value="Libro prestado 1">
@@ -55,7 +56,8 @@
                     <option value="Libro prestado 4">
                     <option value="Libro prestado 5">
 
-                </datalist><br>
+                </datalist>
+                </div>
                 <a class="form_button" href="devolver_libro_info.html">Mirar Libro</a>
             </form>
         </div>
