--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Autor/altas_autor.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Autor/altas_autor.html
@@ -14,7 +14,7 @@
     <title>Biblioteca Pipo</title>
 </head>
 
-<body>
+<body class="image-body">
     <header class="header">
         <!--<div class="home_tittle">
             <img src="../img/IMG_20220402_184004__01.jpg" alt="Imagen del Titulo" width="125">
@@ -45,9 +45,13 @@
         <div class="form_style">
             <form action="">
                 <label for="nombre_autor">Nombre: </label>
-                <input type="text" name="nombre_autor" placeholder="Jorge Luis"><br>
+                <div class="form_style-input">
+                <input type="text" name="nombre_autor" placeholder="Jorge Luis">
+                </div>  
                 <label for="apellido_autor">Apellido: </label>
-                <input type="text" name="apellido_autor" id="" placeholder="Borges"><br>
+                <div class="form_style-input">
+                <input type="text" name="apellido_autor" id="" placeholder="Borges">
+                </div>
                 <a class="form_button" href="#">Agregar Autor</a>
             </form>
         </div>
