--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Prestamos/prestar_libro.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Prestamos/prestar_libro.html
@@ -15,7 +15,7 @@
     <title>Biblioteca Pipo</title>
 </head>
 
-<body>
+<body class="image-body">
     <header class="header">
         <!--<div class="home_tittle">
             <img src="../img/IMG_20220402_184004__01.jpg" alt="Imagen del Titulo" width="125">
@@ -46,15 +46,19 @@
         <div class="form_style">
             <form action="">
                 <label for="Libro">Libro: </label>
+                <div class="form_style-input">
                 <input list="libro" name="Libro" placeholder="Libro 1">
+                
                 <datalist id="libro">
                     <option value="Libro 1">
                     <option value="Libro 2">
                     <option value="Libro 3">
                     <option value="Libro 4">
                     <option value="Libro 5">
-                </datalist><br>
+                </datalist>
+                </div>
                 <label for="Socio">Socio: </label>
+                <div class="form_style-input">
                 <input list="socio" name="Socio" placeholder="Socio 1">
                 <datalist id="socio">
                     <option value="socio 1">
@@ -62,9 +66,12 @@
                     <option value="socio 3">
                     <option value="socio 4">
                     <option value="socio 5">
-                </datalist><br>
+                </datalist>
+                </div>
                 <label for="fecha_prestamo">Fecha del préstamo: </label>
-                <input type="date" name="fecha_prestamo"><br>
+                <div class="form_style-input">
+                <input type="date" name="fecha_prestamo">
+                </div>
                 <a class="form_button" href="#">Prestar Libro</a>
             </form>
         </div>
