--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Socio/altas_socios.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/Socio/altas_socios.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <title>Biblioteca Pipo</title>
 </head>
-<body>
+<body class="image-body">
     <header class="header">
         <!--<div class="home_tittle">
             <img src="../img/IMG_20220402_184004__01.jpg" alt="Imagen del Titulo" width="125">
@@ -44,19 +44,33 @@
         <div class="form_style">
             <form action="">
                 <label for="nombre_socio">Nombre: </label>
-                <input type="text" name="nombre_socio" placeholder="Santino"><br>
+                <div class="form_style-input">
+                <input type="text" name="nombre_socio" placeholder="Santino">
+                </div>
                 <label for="apellido_socio">Apellido: </label>
-                <input type="text" name="apellido_socio" placeholder="Vitale"><br>
+                <div class="form_style-input">
+                <input type="text" name="apellido_socio" placeholder="Vitale">
+                </div>
                 <label for="DNI">DNI: </label>
-                <input type="number" name="DNI" placeholder="46325694"><br>
+                <div class="form_style-input">
+                <input type="number" name="DNI" placeholder="46325694">
+                </div>
                 <label for="email">Email: </label>
-                <input type="email" name="email" placeholder="mail@mail.com"><br>
+                <div class="form_style-input">
+                <input type="email" name="email" placeholder="mail@mail.com">
+                </div>
                 <label for="telefono">Numero: </label>
-                <input type="number" name="telefono" placeholder="2612555473"><br>
+                <div class="form_style-input">
+                <input type="number" name="telefono" placeholder="2612555473">
+                </div>
                 <label for="domicilio">Domicilio: </label>
-                <input type="text" name="domicilio" placeholder="9 de Julio 325"><br>
+                <div class="form_style-input">
+                <input type="text" name="domicilio" placeholder="9 de Julio 325">
+                </div>
                 <label for="Observaciones">Observaciones del socio: </label>
-                <textarea name="Observaciones" cols="30" rows="10"></textarea><br>
+                <div class="form_style-input">
+                <textarea name="Observaciones" cols="30" rows="10"></textarea>
+                </div>
                 <a class="form_button" href="">Agregar socio</a>
             </form>
         </div>
