--- a/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/home.html
+++ b/CoderHouse Proyecto/Biblioteca Pipo (Proyecto)/pages/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../img/Book-icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,8 +15,8 @@
     <title>Biblioteca Pipo</title>
 </head>
 
-<body class="body">
-    <header class="header">
+<body>
+    <header>
         <!--<div class="home_tittle">
             <img src="../img/IMG_20220402_184004__01.jpg" alt="Imagen del Titulo" width="125">
         </div>-->
@@ -24,10 +24,10 @@
             <a href="./home.html" class="home_logo">Biblioteca Pipo</a>
             <ul>
                 <li><a href="./libros.html" class="home_nav-link">Libros</a></li>
-                <li><a href="./autores.html"class="home_nav-link">Autores</a></li>
-                <li><a href="./editoriales.html"class="home_nav-link">Editoriales</a></li>
-                <li><a href="./socios.html"class="home_nav-link">Socios</a></li>
-                <li><a href="./prestamos.html"class="home_nav-link">Préstamos</a></li>
+                <li><a href="./autores.html" class="home_nav-link">Autores</a></li>
+                <li><a href="./editoriales.html" class="home_nav-link">Editoriales</a></li>
+                <li><a href="./socios.html" class="home_nav-link">Socios</a></li>
+                <li><a href="./prestamos.html" class="home_nav-link">Préstamos</a></li>
                 <li><a href="../index.html"><svg xmlns="http://www.w3.org/2000/svg"
                             class="icon icon-tabler icon-tabler-logout" width="44" height="44" viewBox="0 0 24 24"
                             stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round"
@@ -38,8 +38,53 @@
                         </svg></a></li>
             </ul>
         </nav>
+        <div class="home_logo-image"></div>
     </header>
     <main>
+        <div class="home_about">
+            <p class="home_subtittle">
+                Sobre nosotros
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat similique quod ducimus, magnam tempore
+                aspernatur et libero facere quia voluptatum nostrum nesciunt placeat esse nulla accusantium nisi ratione
+                vero aut inventore! Nemo cum a rem voluptas praesentium, molestias harum adipisci dolorum sint saepe
+                corrupti molestiae quos. Assumenda cum ipsum aliquid necessitatibus fugiat eligendi numquam, pariatur
+                nemo earum, quod, architecto dicta. Laudantium quo facilis doloremque, delectus temporibus dolorum odit
+                ad. Distinctio ut mollitia porro dolorum repudiandae odit quaerat odio necessitatibus, blanditiis quas
+                velit perspiciatis libero? Quas quod repudiandae odit quos magnam? Voluptatem totam quae neque animi
+                maxime obcaecati dolorem optio quos!</p>
+        </div>
+
+        <div class="home_books">
+            <p>Libros</p>
+        </div>
+            <div class="home_galery-books">
+            
+            <div class="item-a">
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=8B7BCDC2" alt="">
+            </div>
+            <div>
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=500B67FB" alt="">
+            </div>
+            <div>
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=A89D0DE6" alt="">
+            </div>
+            <div>
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=225E6693" alt="">
+            </div>
+            <div>
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=9D9539E7" alt="">
+            </div>
+            <div>
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=BDC01094" alt="">
+            </div>
+            <div>
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=7F5AE56A" alt="">
+            </div>
+            <div>
+                <img src="https://api.lorem.space/image/book?w=320&h=450&hash=4F32C4CF" alt="">
+            </div>
+        </div>
     </main>
     <footer class="footer">
         Todos los derechos reservados a PipoCorp
